--- a/Languages/Russian/DefInjected/ThingDefs/Buildings_Anomalies.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Buildings_Anomalies.xml
@@ -167,6 +167,8 @@
 
 	<AE_BloodLake.label>странное озеро</AE_BloodLake.label>
 	<AE_BloodLake.description>Темное, вязкое алое озеро, источающее и распространяющееся, резко контрастируя с окружающей средой.</AE_BloodLake.description>
+	<AE_BloodLake.portal.enteredLetterLabel>Територия подконтрольная биомассе</AE_BloodLake.portal.enteredLetterLabel>
+	<AE_BloodLake.portal.enteredLetterText>Перед нами лежит открытое пространство, одно оно кишит различными биошматами. Мы должны преготовится к яросным атакам со стороны окружающей сети биомассы.\n\nЕсли мы не готовы к такой конфронтации, то следует отступить обратно к нашей колонии и подготовится.</AE_BloodLake.portal.enteredLetterText>
 
 	<AE_BloodLake.comps.CompAEStudyUnlocks.studyNotes.0.label>#1/8 Отчет об исследовании кровавого озера</AE_BloodLake.comps.CompAEStudyUnlocks.studyNotes.0.label>
 	<AE_BloodLake.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>Темное, вязкое алое озеро, источающее и распространяющееся, резко контрастируя с окружающей средой. Вещество внутри представляет собой кровиподобную жидкость, состоящую преимущественно из крови с примесью биоферрита. Иногда из нее появляются небольшие биошматов.\n\nКлассифицировано как аномалия класса 2 (Внимательность).</AE_BloodLake.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>
